--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <p>Confira Este Grande Avanço da Programação, exemplo : <a href="https://designer.microsoft.com/image-creator" target="_blank" rel="noopener noreferrer">IA-MICROSOFT</a>.</p>
     <div class="quiz-container">
         <h1>Quiz Interativo</h1>
         <div id="question"></div>
