--- a/interacoes.html
+++ b/interacoes.html
@@ -20,6 +20,8 @@
     <main>
         <section id="tabuleiro"></section>
         <button id="iniciar-jogo">Iniciar Jogo</button>
+        <div id="mensagem-parabens" style="display: none;">Parabéns! Você concluiu o jogo!</div>
+
 </main>
     <footer>
         <p>&copy; 2024 ByteSaga. Todos os direitos reservados.</p>   
