--- a/interacoes.html
+++ b/interacoes.html
@@ -18,14 +18,18 @@
         </nav>
     </header>
     <main>
-        <section id="tabuleiro"></section>
         <button id="iniciar-jogo">Iniciar Jogo</button>
+        <div id="tabuleiro"></div>
         <div id="mensagem-parabens" style="display: none;">Parabéns! Você concluiu o jogo!</div>
-
+        <div id="cronometro">Tempo: 0 segundos</div>
+        <h2>Ranking de Recordes</h2>
+        <ul id="ranking"></ul>
+        <script src="scripti.js"></script>
 </main>
+
+
     <footer>
         <p>&copy; 2024 ByteSaga. Todos os direitos reservados.</p>   
 </body>
-<script src="scripti.js"></script>
 
 </html>
