--- a/interacoes.html
+++ b/interacoes.html
@@ -18,13 +18,14 @@
         </nav>
     </header>
     <main>
+        <h1>Jogo da Memória</h1>
         <button id="iniciar-jogo">Iniciar Jogo</button>
         <div id="tabuleiro"></div>
         <div id="mensagem-parabens" style="display: none;">Parabéns! Você concluiu o jogo!</div>
         <div id="cronometro">Tempo: 0 segundos</div>
         <h2>Ranking de Recordes</h2>
         <ul id="ranking"></ul>
-        <script src="scripti.js"></script>
+        <script src="script.js"></script>
 </main>
 
 
