--- a/interacoes.html
+++ b/interacoes.html
@@ -25,12 +25,14 @@
         <div id="cronometro">Tempo: 0 segundos</div>
         <h2>Ranking de Recordes</h2>
         <ul id="ranking"></ul>
-        <script src="script.js"></script>
+        
 </main>
 
 
     <footer>
-        <p>&copy; 2024 ByteSaga. Todos os direitos reservados.</p>   
+        <p>&copy; 2024 ByteSaga. Todos os direitos reservados.</p>  
+    </footer>
+    <script src="script.js"></script> 
 </body>
 
 </html>
