--- a/interacoes.html
+++ b/interacoes.html
@@ -32,7 +32,7 @@
     <footer>
         <p>&copy; 2024 ByteSaga. Todos os direitos reservados.</p>  
     </footer>
-    <script src="script.js"></script> 
+    <script src="scripti.js"></script> 
 </body>
 
 </html>
