--- a/sobre.html
+++ b/sobre.html
@@ -29,7 +29,7 @@
                     <div class="person">
                         <h4>Emanuel Colpo Wendpap</h4>
                         <br>
-                        <p>Desenvolvedor Front-End</p>
+                        <p>Desenvolvedor Front-End/ Aluno de Programação</p>
                         <br>
                         <img src="emanuel.jpeg" alt="Foto de Emanuel Colpo Wendpap">
                     </div>
@@ -38,9 +38,14 @@
                     <div class="person">
                         <h4>Gabriel Antonio Da Silva</h4>
                         <br>
-                        <p>Designer de UX/UI</p>
+                        <p>Designer de UX/UI/ Aluno de Programação</p>
                         <br>
                         <img src="gabriel.jpeg" alt="Foto de Gabriel Antonio Da Silva">
+                        <h4>Taynara Bueno Rodighero/ Aluna de Programação</h4>
+                        <br>
+                        <p>Designer de UX/UI</p>
+                        <br>
+                        <img src="" alt="Foto de Taynara">
                     </div>
                 </li>
                 <li>
@@ -50,6 +55,12 @@
                         <p>Escritor de Conteúdo/Professora de Programação</p>
                         <br>
                         <img src="gabriela.jpeg" alt="Foto de Gabriela Maria Baggio">
+                        <h4>Ana Julia Macari Rissardi</h4>
+                        <br>
+                        <p>Escritor de Conteúdo/Aluna de Programação</p>
+                        <br>
+                        <img src="gabriela.jpeg" alt="Foto de Gabriela Maria Baggio">
+
                     </div>
                 </li>
             </ul>
