--- a/sobre.html
+++ b/sobre.html
@@ -45,7 +45,7 @@
                         <br>
                         <p>Designer de UX/UI</p>
                         <br>
-                        <img src="" alt="Foto de Taynara">
+                        <img src="taynara.jpeg" alt="Foto de Taynara">
                     </div>
                 </li>
                 <li>
@@ -59,7 +59,7 @@
                         <br>
                         <p>Escritor de Conteúdo/Aluna de Programação</p>
                         <br>
-                        <img src="gabriela.jpeg" alt="Foto de Gabriela Maria Baggio">
+                        <img src="anaj.jpeg" alt="Foto de Gabriela Maria Baggio">
 
                     </div>
                 </li>
