--- a/sobre.html
+++ b/sobre.html
@@ -42,9 +42,9 @@
                         <br>
                         <img src="gabriel.jpeg" alt="Foto de Gabriel Antonio Da Silva">
                         <br>
-                        <h4>Taynara Bueno Rodighero/ Aluna de Programação</h4>
+                        <h4>Taynara Bueno Rodighero</h4>
                         <br>
-                        <p>Designer de UX/UI</p>
+                        <p>Designer de UX/UI/ Aluna de Programação</p>
                         <br>
                         <img src="taynara.jpeg" alt="Foto de Taynara">
                         <br>
