--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ByteSaga</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="descriptio" content="Descrição do meu site">
+    <meta name="keywords" content="IA, Chat-gpt, Tecnologia">
+    <meta name="author" content="Emanuel Colpo Wendpap e Gabriela Maria Baggio">
 </head>
 <body>
     <header>
